#1085 Modernize Java
remove MaxPermSize setting